--- a/docu/fair/TODO
+++ b/docu/fair/TODO
@@ -1,3 +1,7 @@
+12.12.2016
+
+Raum (Flower, Gebäudemanagement) - Done
+Gelder - Done
 Messestand (Kai) - Pending
 Ablaufplan (Teamleiter) - Pending
 Poster (TBD) - Pending
