--- a/docu/minutes/20161114_TeamSensor_08.md
+++ b/docu/minutes/20161114_TeamSensor_08.md
@@ -9,7 +9,6 @@
 ## Anmerkungen
 + Lukas arbeitet momentan im Team Game-Controller
 
-
 ## Erledigt am 07.11
 + Gyroskop am Stuhl angebracht
 + Alle Sensoren am ersten Stuhl zusammen getestet
@@ -20,13 +19,13 @@
 + zweiten Stuhl mit Sensoren ausgestattet
 + angefangen Stecker zu verlöten
 
-
 ## Aufgabenliste
-
 + Bis zum 21.11:
-    1. 2 Stuhl weiter bearbeiten (Hauke, Simon)
+    1. 2 Stuhl fertigestellen (Hauke, Simon)
     2. Dokumentation (Hauke,Lukas,Simon)
 
 + Bis zum 28.11:
-    1. 1 Stuhl mit Steckern verdrahtet
-    2. Funktionstest beider Stühle. Wertebereiche vergleichen.
+    1. Stecker beim 1. Stuhl nachrüsten. (Hauke, Simon)
+    2. Funktionstest beider Stühle. (Hauke, Simon)
+    3. Wertebereiche vergleichen. (Hauke, Simon)
+    4. Dokumentation (Hauke,Lukas,Simon)
